--- a/Week5/hw5-1.md
+++ b/Week5/hw5-1.md
@@ -53,3 +53,13 @@ Suppose you have a collection with the following indexes:
         "name" : "reviews.author_1"
     }
   ```  
+Create a sample data  prod.json with all the fields shown above and import that.Then execute the queries given below.ELiminate the options which result in stage: COLLSCAN
+add .explain("executionStats") to each and every query.
+
+Which of the following queries can utilize at least one index to find all matching documents or to sort? Check all that apply.
+
+
+- [ ] db.products.find( { 'brand' : "GE" } )
+- [X] db.products.find( { 'brand' : "GE" } ).sort( { price : 1 } )
+- [X] db.products.find( { $and : [ { price : { $gt : 30 } },{ price : { $lt : 50 } } ] } ).sort( { brand : 1 } )
+- [ ] db.products.find( { brand : 'GE' } ).sort( { category : 1, brand : -1 } )
