--- a/Week5/hw5-1.md
+++ b/Week5/hw5-1.md
@@ -53,7 +53,7 @@ Suppose you have a collection with the following indexes:
         "name" : "reviews.author_1"
     }
   ```  
-Create a sample data  prod.json with all the fields shown above and import that.Then execute the queries given below.ELiminate the options which result in stage: COLLSCAN
+Create a sample data  prod.json with all the fields shown above and import that(db store,collection products).Then execute the queries given below.ELiminate the options which result in stage: COLLSCAN
 add .explain("executionStats") to each and every query.
 
 Which of the following queries can utilize at least one index to find all matching documents or to sort? Check all that apply.
