--- a/M102/Week6/hw6-1.md
+++ b/M102/Week6/hw6-1.md
@@ -8,7 +8,9 @@ Start an initially empty mongod database instance.
 Connect to it with the shell and week6.js loaded:
 ```mongo --shell localhost/week6 week6.js```
 Run homework.init(). It will take some time to run as it inserts quite a few documents. When it is done run
-```db.trades.stats()```
+```
+db.trades.stats()
+```
 to check the status of the collection. 
 At this point we have a single mongod and would like to transform it into a sharded cluster with one shard. (We'll use this node’s existing week6.trades data in the cluster.)
 
