--- a/M102/Week6/hw6-1.md
+++ b/M102/Week6/hw6-1.md
@@ -30,10 +30,11 @@ Connect to mongos with the shell:
 mongo --shell localhost/week6 week6.js
 Add the first shard ("your_host_name:27018").
 Verify that the week6.trades data is visible via mongos. Note at this point the week6 database isn't "sharding enabled" but its data is still visible via mongos:
-````
+```
 db.trades.find().pretty()
 db.trades.count()
-db.trades.stats()```
+db.trades.stats()
+```
 Run homework.a() and enter the result below. This method will simply verify that this simple cluster is up and running and return a result key.
 
 ```
