--- a/Week6/hw6-1.md
+++ b/Week6/hw6-1.md
@@ -26,4 +26,4 @@ db.companies.aggregate( [
 count: { $sum: 1}     } },     { $sort: { count: -1 } } 
 ] )
 ```
-Ans:15
+Ans:15 //Got from the query,temporary solution only..Will update sson.
