--- a/Week7/Q1.md
+++ b/Week7/Q1.md
@@ -4,7 +4,7 @@ Get the files from Download Handout link, and extract them. Use a.bat instead of
 
 Start a 3 member replica set (with default options for each member, all are peers). (a.sh will start the mongod's for you if you like.)
 
-# if on unix:
+if on unix:
 chmod +x a.sh
 ./a.sh
 You will need to initiate the replica set next.
