--- a/Week7/Q3.md
+++ b/Week7/Q3.md
@@ -9,3 +9,8 @@
 - [ ] It contains 4 documents.
 - [ ] It contains 8 documents.
 - [ ] The file exists but is 0 bytes long.
+
+Hint: Follow the procedure as it is from Q2.After rollback a file will be generated.Run the bsondump command on that file.It will output the data.
+```
+bsondump filename
+```
