--- a/M102/Final/Q2.md
+++ b/M102/Final/Q2.md
@@ -27,15 +27,15 @@ before doing anything else. One way of doing this in Unix would be:
 ```
 ps -A | grep mongod
 ```
-# should see the 27003 and 27002 ones running (only)
+should see the 27003 and 27002 ones running (only)
 ```
 ps ax | grep mongo | grep 27003 | awk '{print $1}' | xargs kill
 ```
-# wait a little for the shutdown perhaps...then:
+wait a little for the shutdown perhaps...then:
 ```
 ps -A | grep mongod
 ```
-# should get that just the arbiter is present…
+should get that just the arbiter is present…
 Now restart just the 27001 member. Wait for it to get healthy -- check this with rs.status() in the shell. Then query
 ```
 > db.foo.find()
