--- a/M102/Final/Q2.md
+++ b/M102/Final/Q2.md
@@ -6,8 +6,8 @@ With all three members (mongod's) up and running, you should be fine; otherwise,
 ```
 ./a.sh
 mongo --shell --port 27003 a.js
-ourinit() 
-```// you might need to wait a bit after this.
+ourinit() // you might need to wait a bit after this.
+```
 // be sure 27003 is the primary. 
 // use rs.stepDown() elsewhere if it isn't.
 ```
