--- a/M102/Final/Q8.md
+++ b/M102/Final/Q8.md
@@ -30,3 +30,17 @@ Notes:
 
 You must do this with MongoDB 3.0. The mongorestore may not work with prior versions of MongoDB.
 If you do not see the prompt with 'configsvr' before the '>', then you are not running as a config server.
+
+```
+Ans:
+mkdir ./data
+mkdir ./data/configdb
+mongod --configsvr --dbpath ./data/configdb --port 27019
+mongorestore ./config_server --host 127.0.0.1:27019 //Restoring
+ mongo localhost:27019/config
+configsvr> 
+configsvr> db
+config
+configsvr> db.chunks.find().sort({_id:1}).next().lastmodEpoch.getTimestamp().toUTCString().substr(20,6)
+//39:15
+```
