--- a/M102/Final/Q9.md
+++ b/M102/Final/Q9.md
@@ -38,3 +38,7 @@ Enter the number output for n.
 Notes:
 
 You must do this with MongoDB 3.0. The mongoimport may not work with prior versions of MongoDB.
+
+
+Ans:47664
+
